--- a/style.css
+++ b/style.css
@@ -1,15 +1,103 @@
 body{
 text-align: justify;
+font-family: Arial, sans-serif;
+margin: 10px;
+padding: 0px;
+color: white;
+background-color: black;
+
+}
+
+
+
+
+
+nav{
+ background-color: black;
+ padding: 15px;
+ text-align: center;
+
+}
+
+
+nav ul{
+padding: 0px;
+margin: 5px;
+list-style-type: none;
 
 
 
 }
 
-
-h1{
- text-align: left;
- color: blue;
-
+nav ul li{
+display: inline;
+margin: 0 15px;
 
 
+
+}
+
+nav ul li a{
+
+text-decoration: none;
+color: white;
+font-weight: bold;
+transition: color 0.3;
+}
+
+
+nav ul li a:hover{
+    color: red;
+
+}
+
+
+header{
+display: flex;
+justify-content: center;
+text-align: center;
+align-items: center;
+position: relative;
+
+
+}
+
+header .overlay {
+ background-color:rgba(red, green, blue, alpha) ;
+ padding: 20px;
+ width: 80%;
+ max-width: 700px;
+ border-radius: px;
+
+}
+
+header h1{
+font-size: 3em;
+margin-bottom: 10px;
+
+
+}
+
+
+header p {
+
+    font-size: 1.0em;
+}
+
+.btn{
+display: inline-block;
+background-color: red;
+color: white;
+padding: 12px 20px;
+text-decoration: none;
+font-weight: bold;
+border-radius: 5px;
+transition: background-color 0.3s;
+
+}
+
+.btn:hover{
+
+
+    background-color: darkred;
 }
