--- a/style.css
+++ b/style.css
@@ -101,3 +101,12 @@ transition: background-color 0.3s;
 
     background-color: darkred;
 }
+
+
+section{
+
+padding: 30px;
+background-color: #222222;
+border-radius: 5px;
+margin: 20px;
+}
