--- a/style.css
+++ b/style.css
@@ -20,24 +20,24 @@ nav{
 }
 
 
-nav ul{
-padding: 0px;
-margin: 5px;
+nav ol{
+padding: 0;
+margin: 0;
 list-style-type: none;
 
 
 
 }
 
-nav ul li{
+nav ol li{
 display: inline;
-margin: 0 15px;
+margin: 0 20px;
 
 
 
 }
 
-nav ul li a{
+nav ol li a{
 
 text-decoration: none;
 color: white;
@@ -46,7 +46,7 @@ transition: color 0.3;
 }
 
 
-nav ul li a:hover{
+nav ol li a:hover{
     color: red;
 
 }
@@ -110,3 +110,21 @@ background-color: #222222;
 border-radius: 5px;
 margin: 20px;
 }
+
+
+h2{
+
+    color: red;
+}
+
+
+
+footer{
+text-align: center;
+background-color: #1111;
+color: grey;
+padding: 20px;
+
+}
+
+
